Add static_tree macrobenchmark

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     <input id="file_upload" type="file">
 </div>
 <div id="tree_chart"></div>
+<div id="static_tree_chart"></div>
 <div id="largetable_chart"></div>
 <div id="naive_infinite_scroll_chart"></div>
 <div id="means"></div>
